fix(board): gap between cards.

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -4,7 +4,7 @@
 .board-card {
   border: 2px solid $color-pf-black-400;
   padding: rem(15);
-  margin: 0 0 rem(10) 0;
+  margin: 0 0 rem(5) 0;
   @extend .flex-container;
   @extend .in-column-direction;
   @extend .flex-grow-1;
