--- a/src/app/components/planner-board/planner-board.component.scss
+++ b/src/app/components/planner-board/planner-board.component.scss
@@ -25,7 +25,7 @@
       vertical-align: top;
       white-space: normal;
       .boardQuickAddContainer {
-        margin-bottom: rem(10);
+        margin-bottom: rem(5);
       }
       .board-lane-column {
         height: 100%;
